--- a/.env
+++ b/.env
@@ -6,4 +6,7 @@
 
 # NEXT_PUBLIC_CANDY_MACHINE_ID = GSerj9qtHmeNPPMTiANKXYyfS3mEKi1ot3ZtGCuGfVKD Rumble
 
-NEXT_PUBLIC_CANDY_MACHINE_ID = BRq4rPZB59P5p5pnrPzSPtuwznL7PEy6oAAP2VCaBweH
+# NEXT_PUBLIC_CANDY_MACHINE_ID = BRq4rPZB59P5p5pnrPzSPtuwznL7PEy6oAAP2VCaBweH
+
+# Echo Forest 10k
+NEXT_PUBLIC_CANDY_MACHINE_ID = Dg1eEfvjm3YeniZ2vuDf1KJcwU8vXLyWPhee6Rbc2Gus 
